--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,11 @@
   --color-primary: #01153e;
   --color-primary-light: #052261;
   --color-light: #e0e9f5;
-  --color-accent: #ffdd33;
+  --color-accent: #ffb300;
+}
+
+.dark{
+   --color-accent: #ffdd33;
 }
 
 @layer base {
