--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
   --color-primary: #01153e;
   --color-primary-light: #052261;
   --color-light: #e0e9f5;
-  --color-accent: #ffb300;
+  --color-accent: #cc7a00;
 }
 
 .dark{
